--- a/movies/templates/movies/searchbox.html
+++ b/movies/templates/movies/searchbox.html
@@ -29,7 +29,7 @@ Place search box
 	</div>
 </div>
 {% csrf_token %}
-<div id="map-canvas" style="height:90%;width:90%;margin:0 auto;"></div>
+<div id="map-canvas"></div>
 {% endblock %}
 {% block script %}
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBq0cTHG8aKJfQz_BmOXy6290UD99vHr1w"></script>
